log
Thu May 12 12:02:28 HSP 2022: 
 tests:  0|5
total_score: 0/70
5a929c5
Thu May 12 12:16:34 HSP 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:62:11: error: statement with no effect [-Werror=unused-value]
           for (newValue; newValue < 9; newValue++)
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
afdaca2
